--- a/src/components/Notas/Notas.module.scss
+++ b/src/components/Notas/Notas.module.scss
@@ -11,9 +11,10 @@
     position: relative;
     border-top-left-radius: 2rem;
     border-bottom-right-radius: 2rem;
+    font-family: 'Poppins', sans-serif;
 
     h1{
-        font-size: 4rem;
+        font-size: 2rem;
         padding: 1rem;
         border: 1px solid white;
         width: 100%;
