--- a/src/components/Notas/Notas.module.scss
+++ b/src/components/Notas/Notas.module.scss
@@ -1,6 +1,6 @@
 .card{
     margin-top: 5rem;
-    width: 250px;
+    min-width: 250px;
     padding: 1rem;
     background-color: rgb(140, 0, 255);
     color: white;
@@ -17,12 +17,13 @@
         font-size: 2rem;
         padding: 1rem;
         border: 1px solid white;
-        width: 100%;
         text-align: center;
+        word-wrap: break-word;
     }
 
     h2{
         font-family: monospace;
+        word-wrap: break-word;
     }
     svg{
         position: absolute;
