--- a/src/components/Formulario/Formulario.module.scss
+++ b/src/components/Formulario/Formulario.module.scss
@@ -39,6 +39,7 @@
   .section{
     display: flex;
     flex-direction: row;
+    justify-content:center;
     gap: 1rem;
     div{
       display: flex;
