--- a/src/components/Formulario/Formulario.module.scss
+++ b/src/components/Formulario/Formulario.module.scss
@@ -40,6 +40,7 @@
     display: flex;
     flex-direction: row;
     justify-content:center;
+    margin: 0 auto;
     gap: 1rem;
     div{
       display: flex;
