--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -2,12 +2,14 @@
   display: flex;
   justify-content: space-between;
   gap: 1rem;
+  position: relative;
   section {
     width: 50%;
     display: flex;
     flex-direction: column;
     input {
-      height: 2rem;
+      height: 1rem;
+      padding-left: 5rem;
       border: 1px solid rgba(201, 201, 201, 0.753);
     }
     article {
