--- a/src/components/Notas/Notas.module.scss
+++ b/src/components/Notas/Notas.module.scss
@@ -11,18 +11,25 @@
   border-top-left-radius: 2rem;
   border-bottom-right-radius: 2rem;
   font-family: "Poppins", sans-serif;
+
   h1 {
     font-size: 1.5rem;
     padding: 1rem;
     border: 1px solid white;
     text-align: center;
     word-wrap: break-word;
+    width: 100%;
   }
 
   h2 {
     font-family: monospace;
     word-wrap: break-word;
+    width: 100%;
+    text-align: start;
+    text-overflow: ellipsis;
+
   }
+
   svg {
     position: absolute;
     top: 0;
@@ -30,6 +37,7 @@
     padding: 0.5rem;
     cursor: pointer;
   }
+  
 }
 .Normal {
   background-color: rgb(140, 0, 255);
